--- a/index.html
+++ b/index.html
@@ -55,24 +55,24 @@
         </section>
         <section class="sec-4">
             <div>
-                <img src="./img/classics_500x.webp" alt="Classic Coffe">
+                <div><a href="#"><img src="./img/classics_500x.webp" alt="Classic Coffe"></a></div>
                 <h3>Classic Coffee</h3>
                 <p>Classic coffees are low maintenance and a friend to all. They're reminiscent of the classic coffees we grew up with. Dark and roasty but never bitter. They fit in everywhere, from a diner to a boutique coffee shop.</p>
-                <p>Sound like you?</p>
+                <p class="sec-4italic">Sound like you?</p>
                 <button>SHOP CLASSIC</button>
             </div>
             <div>
-                <img src="./img/classics2_500x.webp" alt="Contemporary Coffe">
+                <div><a href="#"><img src="./img/classics2_500x.webp" alt="Contemporary Coffe"></a></div>
                 <h3>Contemporary Coffee</h3>
-                <p>Contemporary coffees are nuanced and complex. They’re friendly. Easy going. Not in-your-face. But they’re original, too. They keep your attention but don't make a fuss about it, making them perfect as your daily drinker.</p>
-                <p>Sound like you?</p>
+                <p>Contemporary coffees are nuanced and complex. They're friendly. Easy going. Not in-your-face. But they're original, too. They keep your attention but don't make a fuss about it, making them perfect as your daily drinker.</p>
+                <p class="sec-4italic">Sound like you?</p>
                 <button>SHOP CONTEMPORARY</button>
             </div>
             <div id="Avant">
-                <img src="./img/classics3_500x.webp" alt="Avant-garde Coffe">
+                <div><a href="#"><img src="./img/classics3_500x.webp" alt="Avant-garde Coffe"></a></div>
                 <h3>Avant-garde Coffee</h3>
-                <p>Avant-garde coffees have been everywhere, done everything and they’re back to tell their friends about it. They’re a little out there. Not for everyone. But if you’re up for it, they’ll show you a great time.</p>
-                <p>Sound like you?</p>
+                <p>Avant-garde coffees have been everywhere, done everything and they're back to tell their friends about it. They're a little out there. Not for everyone. But if you’re up for it, they’ll show you a great time.</p>
+                <p class="sec-4italic">Sound like you?</p>
                 <button>SHOP AVANT-GARDE</button>
             </div>
         </section>
@@ -86,17 +86,21 @@
             <p>Coffee's great alone. But better together.</p>
             <h1>Coffee in good company</h1>
                 <div class="grid-container">
-                    <div class="item item1">
-                      <h2>Methodical Tea</h2>
-                      <a href="#">SHOP</a>
+                    <div class="left1">
+                        <div class="item_left">
+                            <img src="./img/grid1.jpg" alt="Methodical Tea">
+                            <div class="overlay"><a href="#" class="image-link">Methodical Tea SHOP</a></div>
+                        </div>
                     </div>
-                    <div class="item item2">
-                      <h2>Brew Gear</h2>
-                      <a href="#">SHOP</a>
-                    </div>
-                    <div class="item item3">
-                      <h2>Methodical Merch</h2>
-                      <a href="#">SHOP</a>
+                    <div class="right1">
+                        <div class="item_right">
+                            <img src="./img/grip2.jpeg" alt="Brew Gear">
+                            <div class="overlay"><a href="#" class="image-link">Brew Gear SHOP</a></div>
+                        </div>
+                        <div class="item_right">
+                            <img src="./img/grip3.webp" alt="Methodical Merch">
+                            <div class="overlay"><a href="#" class="image-link">Methodical Merch SHOP</a></div>  
+                        </div>
                     </div>
             </div>
         </section>
