Anoder configuration with the responsive were added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header><section class="adds"><p>Free shipping on orders over $40</p></section></header>
     
     <nav>
+        <div class="hamM"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+          </div>
         <div class="navers">
             <ul>
                 <li><a href="#Shop" class="underline-effect">Shop</a></li>
