A mobile section was added to improve the resposivity

--- a/index.html
+++ b/index.html
@@ -162,6 +162,31 @@
                     </div>              
             </div>
         </section>
+        <section class="sec-8-mobile">
+            <h1 class="h1sc8">Methodical Culture</h1>
+            <div class="sec-mobile">
+                <div class="mobile-items">
+                    <a href="#"><img src="./img/granosC.webp" alt=""></a>
+                    <a href="#"><p>HOME BARISTA</p></a>
+                    <a href="#"><h1>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h1></a>
+                </div>
+                <div class="mobile-items">
+                    <a href="#"><img src="./img/right1.webp" alt=""></a>
+                    <a href="#"><p>HOME BARISTA</p></a>
+                    <a href="#"><h1>How to Get Into Coffee: A Guide to Coffee for Beginners</h1></a>
+                </div>
+                <div class="mobile-items">
+                    <a href="#"><img src="./img/right2.webp" alt=""></a>
+                    <a href="#"><p>HOME BARISTA</p></a>
+                    <a href="#"><h1>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h1></a>
+                </div>
+                <div class="mobile-items">
+                    <a href="#"><img src="./img/right3.webp" alt=""></a>
+                    <a href="#"><p>HOME BARISTA</p></a>
+                    <a href="#"><h1>Dalgona Coffee: Everything You Need to Know About Whipped Coffee</h1></a>
+                </div>
+            </div>
+        </section>
         <div class="float">
             <a href="#"><p>Want 10% Off?</p></a>
         </div>
