New aestetics updates to the web page have been done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Darker+Grotesque:wght@300..900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Gruppo&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poiret+One&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header><section class="adds"><p>Free shipping on orders over $40</p></section></header>
@@ -16,6 +19,9 @@
         <div class="hamM"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+          </svg>          
           </div>
         <div class="navers">
             <ul>
@@ -96,17 +102,17 @@
                     <div class="left1">
                         <div class="item_left">
                             <img src="./img/grid1.jpg" alt="Methodical Tea">
-                            <div class="overlay"><a href="#" class="image-link">Methodical Tea SHOP</a></div>
+                            <div class="overlay"><p>Methodical Tea</p><a href="#" class="image-link">SHOP</a></div>
                         </div>
                     </div>
                     <div class="right1">
                         <div class="item_right">
                             <img src="./img/grip2.jpeg" alt="Brew Gear">
-                            <div class="overlay"><a href="#" class="image-link">Brew Gear SHOP</a></div>
+                            <div class="overlay"><p>Brew Gear</p><a href="#" class="image-link">SHOP</a></div>
                         </div>
                         <div class="item_right">
                             <img src="./img/grip3.webp" alt="Methodical Merch">
-                            <div class="overlay"><a href="#" class="image-link">Methodical Merch SHOP</a></div>  
+                            <div class="overlay"><p>Methodical Merch</p><a href="#" class="image-link">SHOP</a></div>  
                         </div>
                     </div>
             </div>
