--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Darker+Grotesque:wght@300..900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Gruppo&family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poiret+One&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header><section class="adds"><p>Free shipping on orders over $40</p></section></header>
@@ -105,17 +106,17 @@
                     <div class="left1">
                         <div class="item_left">
                             <img src="./img/grid1.jpg" alt="Methodical Tea">
-                            <div class="overlay"><p>Methodical Tea</p><a href="#" class="image-link">SHOP</a></div>
+                            <div class="overlay"><p>Methodical Tea</p><a href="https://methodicalcoffee.com/collections/tea" class="image-link">SHOP</a></div></a>
                         </div>
                     </div>
                     <div class="right1">
                         <div class="item_right">
                             <img src="./img/grip2.jpeg" alt="Brew Gear">
-                            <div class="overlay"><p>Brew Gear</p><a href="#" class="image-link">SHOP</a></div>
+                            <div class="overlay"><p>Brew Gear</p><a href="https://methodicalcoffee.com/collections/brew-gear" class="image-link">SHOP</a></div>
                         </div>
                         <div class="item_right">
                             <img src="./img/grip3.webp" alt="Methodical Merch">
-                            <div class="overlay"><p>Methodical Merch</p><a href="#" class="image-link">SHOP</a></div>  
+                            <div class="overlay"><p>Methodical Merch</p><a href="https://methodicalcoffee.com/collections/merchandise" class="image-link">SHOP</a></div>  
                         </div>
                     </div>
             </div>
@@ -204,6 +205,9 @@
         </section>
         <div class="float">
             <a href="#"><p>Want 10% Off?</p></a>
+        </div>
+        <div class="float2">
+            <a href="#"><i class="fa-solid fa-person"></i></a>
         </div>
     </main>
     <footer>
