News resposive features and new links were added to the project

--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
         </section>
         <section class="sec-4">
             <div>
-                <div><a href="#"><img src="./img/classics_500x.webp" alt="Classic Coffe"></a></div>
+                <div><a href="https://methodicalcoffee.com/collections/classic-coffees"><img src="./img/classics_500x.webp" alt="Classic Coffe"></a></div>
                 <h3>Classic Coffee</h3>
                 <p>Classic coffees are low maintenance and a friend to all. They're reminiscent of the classic coffees we grew up with. Dark and roasty but never bitter. They fit in everywhere, from a diner to a boutique coffee shop.</p>
                 <p class="sec-4italic">Sound like you?</p>
                 <button>SHOP CLASSIC</button>
             </div>
             <div>
-                <div><a href="#"><img src="./img/classics2_500x.webp" alt="Contemporary Coffe"></a></div>
+                <div><a href="https://methodicalcoffee.com/collections/contemporary-coffees"><img src="./img/classics2_500x.webp" alt="Contemporary Coffe"></a></div>
                 <h3>Contemporary Coffee</h3>
                 <p>Contemporary coffees are nuanced and complex. They're friendly. Easy going. Not in-your-face. But they're original, too. They keep your attention but don't make a fuss about it, making them perfect as your daily drinker.</p>
                 <p class="sec-4italic">Sound like you?</p>
                 <button>SHOP CONTEMPORARY</button>
             </div>
             <div id="Avant">
-                <div><a href="#"><img src="./img/classics3_500x.webp" alt="Avant-garde Coffe"></a></div>
+                <div><a href="https://methodicalcoffee.com/collections/avant-garde-coffees"><img src="./img/classics3_500x.webp" alt="Avant-garde Coffe"></a></div>
                 <h3>Avant-garde Coffee</h3>
                 <p>Avant-garde coffees have been everywhere, done everything and they're back to tell their friends about it. They're a little out there. Not for everyone. But if you’re up for it, they’ll show you a great time.</p>
                 <p class="sec-4italic">Sound like you?</p>
@@ -102,43 +102,45 @@
         <section class="sec-6">
             <p>COFFE'S GREAT ALONE. BUT BETTER TOGETHER.</p>
             <h1>Coffee in good company</h1>
-                <div class="grid-container">
-                    <div class="left1">
-                        <div class="item_left">
-                            <img src="./img/grid1.jpg" alt="Methodical Tea">
-                            <div class="overlay"><p>Methodical Tea</p><a href="https://methodicalcoffee.com/collections/tea" class="image-link">SHOP</a></div></a>
-                        </div>
+            <div class="grid-container">
+                <div class="left1">
+                    <div class="item_left">
+                        <img src="./img/grid1.jpg" alt="Methodical Tea">
+                        <div class="overlay"><a href="https://methodicalcoffee.com/collections/tea" class="image-link"><p>Methodical Tea</p><span>SHOP</span></a></div></a>
                     </div>
-                    <div class="right1">
-                        <div class="item_right">
-                            <img src="./img/grip2.jpeg" alt="Brew Gear">
-                            <div class="overlay"><p>Brew Gear</p><a href="https://methodicalcoffee.com/collections/brew-gear" class="image-link">SHOP</a></div>
-                        </div>
-                        <div class="item_right">
-                            <img src="./img/grip3.webp" alt="Methodical Merch">
-                            <div class="overlay"><p>Methodical Merch</p><a href="https://methodicalcoffee.com/collections/merchandise" class="image-link">SHOP</a></div>  
-                        </div>
+                </div>
+                <div class="right1">
+                    <div class="item_right">
+                        <img src="./img/grip2.jpeg" alt="Brew Gear">
+                        <div class="overlay"><a href="https://methodicalcoffee.com/collections/brew-gear" class="image-link"><p>Brew Gear</p><span>SHOP</span></a></div>
                     </div>
+                    <div class="item_right">
+                        <img src="./img/grip3.webp" alt="Methodical Merch">
+                        <div class="overlay"><a href="https://methodicalcoffee.com/collections/merchandise" class="image-link"><p>Methodical Merch</p><span>SHOP</span></a></div>  
+                    </div>
+                </div>
             </div>
         </section>
         <section class="sec-7">
-            <p>BREW GUIDES</p>
-            <h1>Craft a cup you'll love</h1>
+            <div class="titles7">
+                <p>BREW GUIDES</p>
+                <h1>Craft a cup you'll love</h1>
+            </div>
             <div class="imgbottom">
                 <div>
-                    <a href="#"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"></a>
-                    <a href="#"><p>MANUAL BREWING</p></a>
-                    <a href="#"><h3>How to Make a Pour Over Coffee</h3></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><p>MANUAL BREWING</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><h3>How to Make a Pour Over Coffee</h3></a>
                 </div>
                 <div>
-                    <a href="#"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"></a>
-                    <a href="#"><p>ESPRESSO</p></a>
-                    <a href="#"><h3>How to Clean Your Espresso Machine</h3></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><p>ESPRESSO</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><h3>How to Clean Your Espresso Machine</h3></a>
                 </div>
                 <div>
-                    <a href="#"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"></a>
-                    <a href="#"><p>ESPRESSO</p></a>
-                    <a href="#"><h3>How To Pour Latte Art (Pro Tips for Beginners)</h3></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><p>ESPRESSO</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><h3>How To Pour Latte Art (Pro Tips for Beginners)</h3></a>
                 </div>
             </div>
         </section>            
@@ -146,33 +148,32 @@
             <h1 class="h1sc8">Methodical Culture</h1>
             <div class="grid2"> 
                     <div class="left">
-                        <a href="#"><img src="./img/coffee_cocktail.webp" alt=""></a>
+                        <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""></a>
                         <div>
-                            <a href="#"><p>MANUAL BREWING</p></a>
-                            <a href="#"><h1>20 Coffee Cocktails You Need to Try</h1></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><p>MANUAL BREWING</p></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><h1>20 Coffee Cocktails You Need to Try</h1></a>
                         </div>
-
                     </div>
                     <div class="right">
                         <div class="subright">
-                            <a href="#"><img src="./img/granosC.webp" alt=""></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""></a>
                             <div>
-                                <a href="#"><p>HOME BARISTA</p></a>
-                                <a href="#"><h4>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h4></a>
+                                <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><p>HOME BARISTA</p></a>
+                                <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><h4>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h4></a>
                             </div>
                         </div>
                         <div class="subright">
-                            <a href="#"><img src="./img/right1.webp" alt=""></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""></a>
                             <div>
-                                <a href="#"><p>HOME BARISTA</p></a>
-                                <a href="#"><h4>How to Get Into Coffee: A Guide to Coffee for Beginners</h4></a>
+                                <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><p>HOME BARISTA</p></a>
+                                <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><h4>How to Get Into Coffee: A Guide to Coffee for Beginners</h4></a>
                             </div>
                         </div>
                         <div class="subright">
-                            <a href="#"><img src="./img/right2.webp" alt=""></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""></a>
                             <div>
-                                <a href="#"><p>HOME BARISTA</p></a>
-                                <a href="#"><h4>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h4></a>
+                                <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><p>HOME BARISTA</p></a>
+                                <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><h4>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h4></a>
                             </div>
                         </div>
                     </div>              
@@ -182,24 +183,24 @@
             <h1 class="h1sc8">Methodical Culture</h1>
             <div class="sec-mobile">
                 <div class="mobile-items">
-                    <a href="#"><img src="./img/granosC.webp" alt=""></a>
-                    <a href="#"><p>HOME BARISTA</p></a>
-                    <a href="#"><h1>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h1></a>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""></a></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><p>MANUAL BREWING</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><h1>20 Coffee Cocktails You Need to Try</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <a href="#"><img src="./img/right1.webp" alt=""></a>
-                    <a href="#"><p>HOME BARISTA</p></a>
-                    <a href="#"><h1>How to Get Into Coffee: A Guide to Coffee for Beginners</h1></a>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""></a></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><p>HOME BARISTA</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><h1>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <a href="#"><img src="./img/right2.webp" alt=""></a>
-                    <a href="#"><p>HOME BARISTA</p></a>
-                    <a href="#"><h1>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h1></a>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""></a></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><p>HOME BARISTA</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><h1>How to Get Into Coffee: A Guide to Coffee for Beginners</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <a href="#"><img src="./img/right3.webp" alt=""></a>
-                    <a href="#"><p>HOME BARISTA</p></a>
-                    <a href="#"><h1>Dalgona Coffee: Everything You Need to Know About Whipped Coffee</h1></a>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""></a></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><p>HOME BARISTA</p></a>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><h1>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h1></a>
                 </div>
             </div>
         </section>
@@ -207,7 +208,7 @@
             <a href="#"><p>Want 10% Off?</p></a>
         </div>
         <div class="float2">
-            <a href="#"><i class="fa-solid fa-person"></i></a>
+            <a href="https://methodicalcoffee.com/pages/accessibility"><i class="fa-solid fa-person"></i></a>
         </div>
     </main>
     <footer>
@@ -216,12 +217,12 @@
           <div class="footer-section">
             <h3>CUSTOMER SERVICE</h3>
             <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Shipping Info</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Refund Policy</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Accessibility</a></li>
+              <li><a href="https://methodicalcoffee.com/pages/faq">FAQ</a></li>
+              <li><a href="https://methodicalcoffee.com/policies/shipping-policy">Shipping Info</a></li>
+              <li><a href="https://methodicalcoffee.com/pages/contact">Contact</a></li>
+              <li><a href="https://methodicalcoffee.com/policies/refund-policy">Refund Policy</a></li>
+              <li><a href="https://methodicalcoffee.com/policies/privacy-policy">Privacy Policy</a></li>
+              <li><a href="https://methodicalcoffee.com/pages/accessibility">Accessibility</a></li>
             </ul>
           </div>
     
@@ -229,12 +230,12 @@
           <div class="footer-section">
             <h3>EXPLORE</h3>
             <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Home Brewer’s League</a></li>
-              <li><a href="#">Job Opportunities</a></li>
-              <li><a href="#">Brew Guides</a></li>
-              <li><a href="#">Coffee Culture</a></li>
-              <li><a href="#">Cafe Ordering</a></li>
+              <li><a href="https://methodicalcoffee.com/pages/about-us">About Us</a></li>
+              <li><a href="https://methodicalcoffee.com/pages/home-brewers-league">Home Brewer’s League</a></li>
+              <li><a href="https://methodicalcoffee.isolvedhire.com/jobs/">Job Opportunities</a></li>
+              <li><a href="https://methodicalcoffee.com/blogs/brew-guides">Brew Guides</a></li>
+              <li><a href="https://methodicalcoffee.com/blogs/coffee-culture">Coffee Culture</a></li>
+              <li><a href="https://methodical-pick-up.square.site/">Cafe Ordering</a></li>
             </ul>
           </div>
     
@@ -286,8 +287,6 @@
             <svg viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" role="img" width="38" height="24" aria-labelledby="pi-visa"><title id="pi-visa">Visa</title><path opacity=".07" d="M35 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.4 3 3 3h32c1.7 0 3-1.3 3-3V3c0-1.7-1.4-3-3-3z"></path><path fill="#fff" d="M35 1c1.1 0 2 .9 2 2v18c0 1.1-.9 2-2 2H3c-1.1 0-2-.9-2-2V3c0-1.1.9-2 2-2h32"></path><path d="M28.3 10.1H28c-.4 1-.7 1.5-1 3h1.9c-.3-1.5-.3-2.2-.6-3zm2.9 5.9h-1.7c-.1 0-.1 0-.2-.1l-.2-.9-.1-.2h-2.4c-.1 0-.2 0-.2.2l-.3.9c0 .1-.1.1-.1.1h-2.1l.2-.5L27 8.7c0-.5.3-.7.8-.7h1.5c.1 0 .2 0 .2.2l1.4 6.5c.1.4.2.7.2 1.1.1.1.1.1.1.2zm-13.4-.3l.4-1.8c.1 0 .2.1.2.1.7.3 1.4.5 2.1.4.2 0 .5-.1.7-.2.5-.2.5-.7.1-1.1-.2-.2-.5-.3-.8-.5-.4-.2-.8-.4-1.1-.7-1.2-1-.8-2.4-.1-3.1.6-.4.9-.8 1.7-.8 1.2 0 2.5 0 3.1.2h.1c-.1.6-.2 1.1-.4 1.7-.5-.2-1-.4-1.5-.4-.3 0-.6 0-.9.1-.2 0-.3.1-.4.2-.2.2-.2.5 0 .7l.5.4c.4.2.8.4 1.1.6.5.3 1 .8 1.1 1.4.2.9-.1 1.7-.9 2.3-.5.4-.7.6-1.4.6-1.4 0-2.5.1-3.4-.2-.1.2-.1.2-.2.1zm-3.5.3c.1-.7.1-.7.2-1 .5-2.2 1-4.5 1.4-6.7.1-.2.1-.3.3-.3H18c-.2 1.2-.4 2.1-.7 3.2-.3 1.5-.6 3-1 4.5 0 .2-.1.2-.3.2M5 8.2c0-.1.2-.2.3-.2h3.4c.5 0 .9.3 1 .8l.9 4.4c0 .1 0 .1.1.2 0-.1.1-.1.1-.1l2.1-5.1c-.1-.1 0-.2.1-.2h2.1c0 .1 0 .1-.1.2l-3.1 7.3c-.1.2-.1.3-.2.4-.1.1-.3 0-.5 0H9.7c-.1 0-.2 0-.2-.2L7.9 9.5c-.2-.2-.5-.5-.9-.6-.6-.3-1.7-.5-1.9-.5L5 8.2z" fill="#142688"></path></svg>
           </div>
         </div>
-
       </footer>
-
 </body>
 </html>
