--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
                 <h1>Craft a cup you'll love</h1>
             </div>
             <div class="imgbottom">
-                <div>
+                <div class="carousel">
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><p>MANUAL BREWING</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><h3>How to Make a Pour Over Coffee</h3></a>
                 </div>
-                <div>
+                <div class="carousel">
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><p>ESPRESSO</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><h3>How to Clean Your Espresso Machine</h3></a>
                 </div>
-                <div>
+                <div class="carousel">
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><p>ESPRESSO</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><h3>How To Pour Latte Art (Pro Tips for Beginners)</h3></a>
