A image have been added to the footer input, and some configurations to the font, also a new resolution image was changed to de "right1.wenp"

--- a/index.html
+++ b/index.html
@@ -247,10 +247,9 @@
             <p>Receive special offers and first look at new products.</p>
             <form class="newsletter-form">
               <input type="email" placeholder="Your e-mail" required>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <button><svg class="input-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
-              </svg>
-              
+              </svg></button>
             </form>
           </div>
     
