A flex has been added to sec-7

--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
             </div>
             <div class="imgbottom">
                 <div class="carousel">
-                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><p>MANUAL BREWING</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><h3>How to Make a Pour Over Coffee</h3></a>
                 </div>
                 <div class="carousel">
-                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><p>ESPRESSO</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><h3>How to Clean Your Espresso Machine</h3></a>
                 </div>
                 <div class="carousel">
-                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><p>ESPRESSO</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><h3>How To Pour Latte Art (Pro Tips for Beginners)</h3></a>
                 </div>
